--- a/css/thecaedmonapp.css
+++ b/css/thecaedmonapp.css
@@ -387,7 +387,7 @@ a: visited {
 	text-align: center;
 	padding: 16px;
 	font-family: Helvetica;
-	background-color: #fdc100;
+	background-color: #8F2FCA;
 	border-style: solid;
 	border-color: #444;
 	border-width: 4px;
@@ -414,7 +414,7 @@ a: visited {
 	text-align: center;
 	padding: 16px;
 	font-family: Helvetica;
-	background-color: #fdc100;
+	background-color: #8F2FCA;
 	border-style: solid;
 	border-color: #444;
 	border-width: 4px;
@@ -457,7 +457,7 @@ a: visited {
 	text-align: center;
 	padding: 16px;
 	font-family: Helvetica;
-	background-color: #fdc100;
+	background-color: #8F2FCA;
 	border-style: solid;
 	border-color: #444;
 	border-width: 4px;
