--- a/css/thecaedmonapp.css
+++ b/css/thecaedmonapp.css
@@ -33,7 +33,7 @@ a:hover{
 	/*color: white;*/
 }
 
-@media only screen and (max-device-width: 480px) {
+@media (max-width: 1000px) {
       .show-mobile {
         display: block;
       }
@@ -42,7 +42,7 @@ a:hover{
       }
     }
 
- @media only screen and (min-device-width: 481px) {
+@media (min-width: 1000px) {
       .show-mobile {
         display: none;
       }
@@ -617,7 +617,7 @@ li:hover {
 }
 /*@media only screen and (max-device-width: 480px) {*/
 /*@media (max-width: 700px) {*/
-@media only screen and (max-device-width: 480px) {
+@media (max-width: 1000px) {
   .menu-button-container {
     display: flex;
   }
