--- a/css/contact.css
+++ b/css/contact.css
@@ -4,7 +4,7 @@ h1 {
 }
 
 body {
-	background: linear-gradient(#197FE0, #9C1FD8, #B93ECD);
+	background: linear-gradient(#197FE0, #A487FF, #A487FF);
 	background-attachment: fixed;
 	/*background-color: #fdc100;*/
 }
@@ -484,7 +484,7 @@ a: visited {
 	text-align: center;
 	padding: 16px;
 	font-family: Helvetica;
-	background-color: #fdc100;
+    background: linear-gradient(to right, #FF3A99, #A487FF);
 	border-style: solid;
 	border-color: #444;
 	border-width: 4px;
@@ -511,7 +511,7 @@ a: visited {
 	text-align: center;
 	padding: 16px;
 	font-family: Helvetica;
-	background-color: #fdc100;
+    background: linear-gradient(to right, #FF3A99, #A487FF);
 	border-style: solid;
 	border-color: #444;
 	border-width: 4px;
@@ -554,7 +554,7 @@ a: visited {
 	text-align: center;
 	padding: 16px;
 	font-family: Helvetica;
-	background-color: #fdc100;
+    background: linear-gradient(to right, #FF3A99, #A487FF);
 	border-style: solid;
 	border-color: #444;
 	border-width: 4px;
@@ -644,7 +644,7 @@ li:hover {
   align-items: center;
   justify-content: space-between;
   background-color: #00BAF0;
-  background: linear-gradient(#197FE0, #9C1FD8, #B93ECD);
+  background: linear-gradient(#197FE0, #A487FF);
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   color: #FFF;
   height: 75px;
@@ -716,7 +716,7 @@ li:hover {
 
 /*@media only screen and (max-device-width: 480px) {*/
 /*@media (max-width: 1000px) {*/
-@media (max-width: 1000px) {
+@media (max-width: 1200px) {
   .menu-button-container {
     display: flex;
   }
