--- a/css/base.css
+++ b/css/base.css
@@ -834,13 +834,13 @@ li:hover {
     margin: 0;
     padding: 0;
     border: 0;
-    transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
+    transition: all 400ms cubic-bezier(0.23, 1, 0.32, 1);
   }
   #menu-toggle:checked ~ .menu li {
     border: 0.5px solid #444;
     height: 3em;
     padding: 0.85em;
-    transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
+    transition: all 400ms cubic-bezier(0.23, 1, 0.32, 1);
   }
   .menu > li {
     display: flex;
@@ -850,6 +850,7 @@ li:hover {
     width: 100%;
     color: white;
     background-color: #A487FF;
+	transition:%20all%20400ms%20cubic-bezier(0.23,%201,%200.32,%201);
   }
   .menu > li:not(:last-child) {
     border-bottom: 1px solid #444;
